# yadi

./: .gitignore  .releaserc.json  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: design.md
src/: lib.rs  prelude.rs
src/app/: builder.rs  config.rs  container.rs  mod.rs  result.rs  service_locator.rs
src/app/service_locator/: builder.rs  mod.rs  service_locator.rs
src/domain/: mod.rs  result.rs
src/domain/entity/: entry.rs
src/domain/repo/: entry.rs  mod.rs
src/domain/service/: entry.rs  mod.rs
src/domain/vo/: entry_id.rs  error.rs  life_time.rs  mod.rs
src/domain/vo/entry/: id.rs  lifetime.rs  mod.rs  tag.rs
src/domain/vo/entry/qc/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/infra/: mod.rs
src/infra/dto/: error.rs  mod.rs  tag.rs
src/infra/repo/: entry.rs  mod.rs
src/prelude/: v1.rs
yadi/: Cargo.toml
yadi/src/: builder.rs  container.rs  entry.rs  error.rs  factory.rs  injectable.rs  lib.rs  result.rs
yadi/src/builder/: builder_trait.rs  mod.rs
yadi/src/container/: container_trait.rs  mod.rs
yadi_derive/: Cargo.toml
