[package]
name = "yadi"
version = "1.0.0-alpha"
authors = ["Dmitrii Chizha <awesome.chekushka@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
YaDI is yet another dependency injection framework
for writing applications with the Rust programming language
"""
homepage = "https://github.com/FilaCo/yadi"
documentation = "https://docs.rs/yadi"
repository = "https://github.com/FilaCo/yadi"
readme = "README.md"
keywords = ["dependency-injection", "yadi", "ioc", "di"]
categories = ["rust-patterns"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
